<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CloudClient</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="authentication">用户认证</string>
    <string name="res_manage">云资源管理</string>
    <string name="upload_data">上传数据</string>
    <string name="download_data">下载数据</string>
    <string name="show_data">运行状态</string>
    <string name="send_mail">使用反馈</string>
    <string name="computer_offload">计算卸载</string>
    <string name="about_cloudclient">关于程序</string>
	<string name="app_authen">虚拟移动存储客户端软件</string>
	<string name="userName">云用户名</string>
	<string name="userKey">用户密码</string>
	<string name="login">登陆云端</string>
	<string name="logout">退出登录</string>
	<string name="authenHelp">使用帮助</string>
	<string name="exit_progress">再按一次退出程序</string>
	<string name="about_program">Copyright NJUPTJSY\n南京邮电大学 金思宇\n1192937986@qq.com</string>
	<string name="about">关于程序</string>
	<string name="data_chart_title">云客户数据表示</string>
	<string name="data_chart_context">四个不同的图表用于表示云端数据\n左划或右划显示不同图表</string>
	<string name="data_upload">选择待上传数据</string>
	<string name="data_select">查看本机文件目录</string>
	<string name="file_explorer">CloudClient文件浏览器></string>
	<string name="to_root">返回根目录</string>
	<string name="to_parent">返回上一级目录</string>
	<string name="Select_file_path">已选文件：</string>
	<string name="sendFile">云端同步已选文件</string>
	<string name="alreadly_root">已经是根目录</string>
	<string name= "labelsend">邮件反馈</string>
	<string name= "emailaddress">邮件地址</string>
	<string name= "problemcontext">问题描述:</string>
	<string name= "sendmailbutton">发送邮件</string>
	<string name= "sending">邮件正在发生中..</string>
	<string name= "wait_send">正在发生上一封邮件，请稍后..</string>
	<string name= "user_unauthen_fail">账号或密码错误</string>
	<string name= "login_success">登陆成功</string>
	<string name= "login_failed_retry">云端无响应请重试</string>
	<string name= "login_failed_no_internet">无网络连接</string>
	<string name= "login_now">正在登陆</string>
	<string name= "please_wait">请稍等....</string>
	<string name= "file_in_cloud">云端文件:</string>
	<string name= "checking_cloud">查询云端已有文件</string>
	<string name = "had_selected">文件已选，请勿重复选择</string>
	<string name = "sdcard_unmounted">无法保存文件，SD卡被占用</string>
	<string name = "download_success">下载成功，文件保存在 </string>
	<string name = "please_login">请先进行用户认证</string>
	<string name = "please_select">请选择要下载的文件</string>
	<string name = "remember_pwd">记住密码</string>
	<string name = "remember_user">记住账号</string>
	<string name = "upload_success">上传成功</string>
		<string name = "nofileselected">请选择要上传的文件</string>
	<string name = "selectcloud">选择云平台</string>
	<string name = "aliyun">Aliyun</string>
	<string name = "aws">AWS</string>
	<string name = "openstack">OpenStack</string>
	<string name = "sure">确定</string>
	<string name = "logtocloud">已登录云平台：</string>
	<string name = "loginnow">正在进行登录操作</string>
</resources>
